<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout_SignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activityes.SignIn_Activity"
        android:textDirection="rtl"
        tools:ignore="ExtraText">
        <View
            android:id="@+id/viewSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:background="@drawable/gradient_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        //Back Button
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toTopOf="@id/viewSignUp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            android:layout_margin="@dimen/_15sdp"-->
<!--            android:gravity="end"-->
<!--            app:layout_constraintEnd_toEndOf="parent">-->
            <ImageView
                android:id="@+id/backSignIn_Bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/back_ios_new_24"/>


        <LinearLayout
            android:id="@+id/vertial_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/viewSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.153">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/viewSignUp"
                android:src="@drawable/mainlogo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/title_White_Color"/>
        </LinearLayout>




        <View
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="575dp"
            android:layout_marginTop="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vertial_Layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/cardview_shape"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cardView"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                style="@style/title_Blue_Color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signIn" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/describtion_ShadowBlack_Color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account" />

                <TextView
                    android:id="@+id/signUpBut_InSignIn"
                    style="@style/describtion_ShadowPink_Color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/create_New_Account" />

            </LinearLayout>


            <EditText
                android:id="@+id/editPhone_SignIn"
                style="@style/edit_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableEnd="@drawable/phone_android_24"
                android:gravity="end"
                android:hint="رقم الهاتف"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editPass_SignIn"
                style="@style/edit_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableEnd="@drawable/eye_24"
                android:gravity="end"
                android:hint="كلمة المرور"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signIn_But"
                style="@style/default_Button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:text="@string/signIn"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgetPassBut_InSignIn"
                style="@style/describtion_ShadowPink_Color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/forgtPass" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/OR"
                android:textColor="#3A7FC0"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/gmail_ButSignIn"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/gmailicon"
                    app:layout_constraintBottom_toBottomOf="@id/viewSignUp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>