<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout_VerifyForgetPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VerifyForgetPass_Activity"
        android:textDirection="rtl"
        tools:ignore="ExtraText">
        <View
            android:id="@+id/viewSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:background="@drawable/gradient_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        //Back Button
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/viewSignUp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/_15sdp"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/backSignIn_VerifyPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_ios_new_24"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vertial_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/viewSignUp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/viewSignUp"
                android:src="@drawable/mainlogo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/title_White_Color"/>
        </LinearLayout>




        <View
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_460sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vertial_Layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/cardview_shape"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cardView"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingClass">

            <TextView
                style="@style/title_Blue_Color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Verify_Pass" />

            <TextView
                style="@style/describtion_ShadowBlack_Color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_27sdp"
                android:text="@string/sms6" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">
                <ProgressBar
                    android:id="@+id/progress_VerifyAccount"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:max="60"
                    android:progress="60"
                    android:progressDrawable="@drawable/progress_shap"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <TextView
                    android:id="@+id/downTimer_VerifyAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="60"
                    style="@style/describtion_Black_Color"
                    app:layout_constraintTop_toTopOf="@+id/progress_VerifyAccount"
                    app:layout_constraintStart_toStartOf="@id/progress_VerifyAccount"
                    app:layout_constraintEnd_toEndOf="@id/progress_VerifyAccount"
                    app:layout_constraintBottom_toBottomOf="@id/progress_VerifyAccount"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.chaos.view.PinView
                android:id="@+id/firstPinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="xxxxxx"
                android:layout_marginTop="@dimen/_20sdp"
                android:inputType="number"
                android:padding="@dimen/_10sdp"
                android:textColor="#3A7FC0"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cursorColor="#E32C83"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="0dp"
                app:itemWidth="48dp"
                app:lineColor="#E32C83"
                app:lineWidth="2dp"
                app:viewType="rectangle" />




            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/verify_ButForget"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                style="@style/default_Button"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reSend_ButForget"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                style="@style/default_Button"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/ReSend"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />





        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>