<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout_Forget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activityes.Forget_Activity"
        android:textDirection="rtl"
        tools:ignore="ExtraText">
        <View
            android:id="@+id/viewSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_215sdp"
            android:background="@drawable/gradient_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        //Back Button
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/viewSignUp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/_15sdp"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/backSignIn_Bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_ios_new_24"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vertial_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/viewSignUp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/viewSignUp"
                android:src="@drawable/mainlogo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/title_White_Color"/>
        </LinearLayout>




        <View
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="575dp"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vertial_Layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/cardview_shape"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cardView"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                style="@style/title_Blue_Color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/New_Pass" />



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:textDirection="rtl"
                android:layoutDirection="rtl"
                android:gravity="end"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/edit_Text"
                    android:hint="كلمة المرور الجديدة"
                    android:padding="10dp"
                    android:textDirection="ltr"
                    android:gravity="end"
                    android:layoutDirection="rtl"
                    android:inputType="textVisiblePassword"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:maxLines="1"/>

                <ImageView
                    android:id="@+id/eyePass"
                    android:layout_width="34dp"
                    android:layout_height="19dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/lock_24"
                    app:layout_constraintBottom_toBottomOf="@id/editPass"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/editNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edit_Text"
                android:gravity="end"
                android:hint="+972597785533"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:drawableEnd="@drawable/phone_android_24"
                android:inputType="phone"
                android:maxLines="1"/>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/verify_ButForget"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                style="@style/default_Button"
                android:layout_marginTop="30dp"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="14sp" />





        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>